--- a/baitapjava.html
+++ b/baitapjava.html
@@ -143,13 +143,111 @@
         //         break;
         // }
         //bt1-ss9
-        const age = parseInt(prompt("nhập số tuổi:"));
-        if (age > 18) {
-            console.log("bạn trên 18 tủi")
-        }
-        else {
-            console.log("bạn chưa đủ 18 tủi")
-        }
+        // const age = parseInt(prompt("nhập số tuổi:"));
+        // if (age > 18) {
+        //     console.log("bạn trên 18 tủi")
+        // }
+        // else {
+        //     console.log("bạn chưa đủ 18 tủi")
+        // }
+        //bt2-ss9
+        // const time = parseInt(prompt("nhập số giờ dưới định dạng 24h:"));
+        // if (time > 18) {
+        //     console.log("Good Evening")
+        // }
+        // else {
+        //     console.log("Good Day")
+        // }
+        //bt3-ss9
+        // const time = parseInt(prompt("nhập số giờ dưới định dạng 24h:"));
+        // if (time < 10) {
+        //     console.log("Good Morning")
+        // }
+        // else if (10 < time < 20) {
+        //     console.log("Good Day")
+        // }
+        // else {
+        //     console.log("Good Evening")
+        // }
+        // bt6-ss9
+        // const color = prompt("nhập màu vào");
+        // switch (color) {
+        //     case "đỏ":
+        //         console.log("đỏ");
+        //         break;
+        //     case "vàng":
+        //         console.log("vàng");
+        //         break;
+        //     case "xanh":
+        //         console.log("xanh");
+        //         break;
+        //     default:
+        //         console.log("màu không hợp lệ!");
+        //         break;
+
+        // }
+        //bt7-ss9
+        // const number = parseInt(prompt("nhập vào 1 số nguyên x:"));
+        // if (number == 0) {
+        //     console.log("số có giá trị bằng 0")
+        // }
+        // else if (number > 0) {
+        //     console.log("số nguyên dương")
+        // }
+        // else {
+        //     console.log("số nguyên âm")
+        // }
+        //bt8-ss9
+        // const weight = parseFloat(prompt("Nhập cân nặng(kg)"));
+        // const height = parseFloat(prompt("Nhập chiều cao(m)"));
+        // const bmi = weight / (height * height);
+        // if (bmi < 18.5) {
+        //     console.log("Cân nặng hơi gầy một tí!");
+        // }
+        // else if (18.5 < bmi < 25) {
+        //     console.log("Sức khoẻ bình thường!");
+        // }
+        // else if (bmi >= 25) {
+        //     console.log("Cân nặng hơi béo một tí!");
+        // }
+        // else if (25 <= bmi < 30) {
+        //     console.log("Chuẩn bị béo phì rồi nha");
+        // }
+        // else if (30 <= bmi < 35) {
+        //     console.log("Béo phì cấp độ 1");
+        // }
+        // else if (35 <= bmi < 40) {
+        //     console.log("Béo phì cấp độ 2");
+        // } else {
+        //     console.log("Béo phì cấp độ 3");
+        // }
+        //bt9-ss9
+        // const math = parseInt(prompt("enter number"));
+        // const physics = parseInt(prompt("enter number"));
+        // const chemistry = parseInt(prompt("enter number"));
+        // const Average = (math + physics + chemistry) / 3;
+
+        // if (8 <= Average && Average <= 10) console.log("GIỎI")
+        // else if (6.5 <= Average && Average <= 7.9) {
+        //     console.log("KHÁ");
+        // } else if (5.0 <= Average && Average <= 6.4) {
+        //     console.log(" TRUNG BÌNH");
+        // } else {
+        //     console.log("YẾU");
+        // }
+        //bài tập ngoài của Khầy Duy
+        // let a = parseInt(prompt("a"))
+        // let b = parseInt(prompt("b"))
+        // let c = parseInt(prompt("c"))
+
+        // if (a + b > c && b + c > a && a + c > b && a > 0 && b > 0 && c > 0) {
+        //     if (a == b == c) (console.log("tam giác đều"))
+        //     else if (a == b || b == c || a == c) (console.log("tam giác cân"))
+        //     else { console.log("tam giác thường") }
+        // }
+        // else { console.log("không phải tam giác") };
+
+
 
 
 
